--- a/2048.html
+++ b/2048.html
@@ -84,7 +84,7 @@
 	       	 findFreeCells();
 		 tmp_id = Math.floor(Math.random() * gameField.freeMapCells.length); 
 		 /*tmp_id will get a random index from freeMap cells which has the ids  			
-		 for every empty cell or cells that has the 2 value inside*/ 		
+		 for every empty cell*/ 		
 		
 		 index1 = gameField.freeMapCells[tmp_id].charAt(0);
 		 index2 = gameField.freeMapCells[tmp_id].charAt(1); 
